<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dictionary_name" >
        </TextView>

        <TextView
            android:id="@+id/dictionaryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="" >
        </TextView>
    </LinearLayout>

    <EditText
        android:id="@+id/etDictionaryValueName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dictionary_value_name" >
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" >
    </Button>

</LinearLayout>